[package]
name = "channels_lite"
version = "0.2.0"
authors = ["Yolier Galán Tassé <gallegogt@gmail.com>", "Alessandro Buser <4l3bu53r@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"


[lib]
name = "channels_lite"
path = "src/lib.rs"

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams.git" }
failure = "0.1.7"
iota-lib-rs = "0.4.1"
tokio = { version = "^0.2", features = ["full"] }
async-trait = "0.1.30"
chrono = "0.4"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
